Replace all blog links

--- a/public/index_chinese/index.html
+++ b/public/index_chinese/index.html
@@ -54,7 +54,7 @@
             <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">github.</a>
             <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
             <a class="nav__right__item active" href="/standards">standards.</a>
-            <a class="nav__right__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
+            <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
           </nav>
           <!-- /if desktop -->
 
@@ -71,7 +71,7 @@
           <a class="mobile-menu__item" target="_blank" href="https://github.com/statechannels">github.</a>
           <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org">forum.</a>
           <a class="mobile-menu__item active" href="/standards">standards.</a>
-          <a class="mobile-menu__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
+          <a class="mobile-menu__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
         </div>
       </div>
     </div>
