--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
             <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">github.</a>
             <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
             <a class="nav__right__item" href="/standards">standards.</a>
-            <a class="nav__right__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
+            <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
           </nav>
           <!-- /if desktop -->
 
@@ -68,7 +68,7 @@
           <a class="mobile-menu__item" target="_blank" href="https://github.com/statechannels">github.</a>
           <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org">forum.</a>
           <a class="mobile-menu__item" href="/standards">standards.</a>
-          <a class="mobile-menu__item" target="_blank" href="https://medium.com/statechannels">blog.</a>
+          <a class="mobile-menu__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
         </div>
       </div>
     </div>
