Update landing page

--- a/public/index.html
+++ b/public/index.html
@@ -83,10 +83,11 @@
           <div class="callout">
             <div class="callout__content">
               <h2 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h2>
+              <h3 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/do-we-still-need-state-channels/"><b>Do we still need state channels?</b></a></h3>
               <div class="callout__content__buttons">
-                <a class="btn btn--stroke" target="_blank" href="https://rps.statechannels.org">try the demo</a>
-                <a class="btn btn--stroke" target="_blank" href="https://protocol.statechannels.org">see protocol docs</a>
-                <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">read the code</a>
+                <a class="btn btn--stroke" target="_blank" href="https://blog.statechannels.org">the blog</a>
+                <a class="btn btn--stroke" target="_blank" href="https://protocol.statechannels.org">protocol docs</a>
+                <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">the code</a>
               </div>
             </div>
           </div>
