--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
           <div class="callout">
             <div class="callout__content">
               <h2 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h2>
-              <h3 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/state-channel-exit-games/"><b>State Channel Exit Games</b></a></h3>
+              <h3 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/putting-the-state-in-state-channels/"><b>Putting the State in State Channels</b></a></h3>
               <div class="callout__content__buttons">
                 <a class="btn btn--stroke" target="_blank" href="https://blog.statechannels.org">the blog</a>
                 <a class="btn btn--stroke" target="_blank" href="https://protocol.statechannels.org">protocol docs</a>
