--- a/public/index.html
+++ b/public/index.html
@@ -14,22 +14,22 @@
   <meta name="description" content="State channels scale peer-to-peer blockchain interactions.">
   
   <meta property="og:description" content="State channels scale peer-to-peer blockchain interactions.">
-  <meta property="og:site_name" content="State Channels">
-  <meta property="og:title" content="State Channels">
+  <meta property="og:site_name" content="State Channels - Instant P2P Ethereum Transactions">
+  <meta property="og:title" content="State Channels - Instant P2P Ethereum Transactions">
   <meta property="og:url" content="https://statechannels.org/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://statechannels.org/assets/symbol.png">
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
   
-  <meta name="twitter:title" content="State Channels">
+  <meta name="twitter:title" content="State Channels - Instant P2P Ethereum Transactions">
   <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/">
   <meta name="twitter:image" content="https://statechannels.org/assets/symbol.png">
 
   <link rel="stylesheet" href="/app.css">
-  <title>State Channels</title>
+  <title>State Channels - Instant P2P Ethereum Transactions</title>
 </head>
 <body>
   <div class="wrapper">
