--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3531ff">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
-  <meta name="description" content="State channels scale peer-to-peer blockchain interactions.">
+  <meta name="description" content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
   
-  <meta property="og:description" content="State channels scale peer-to-peer blockchain interactions.">
+  <meta property="og:description" content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
   <meta property="og:site_name" content="State Channels - Instant P2P Ethereum Transactions">
   <meta property="og:title" content="State Channels - Instant P2P Ethereum Transactions">
   <meta property="og:url" content="https://statechannels.org/">
@@ -23,7 +23,7 @@
   <meta property="og:image:height" content="400" />
   
   <meta name="twitter:title" content="State Channels - Instant P2P Ethereum Transactions">
-  <meta name="twitter:description" content="State channels scale peer-to-peer blockchain interactions.">
+  <meta name="twitter:description" content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/">
   <meta name="twitter:image" content="https://statechannels.org/assets/symbol.png">
