--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
           <div class="callout">
             <div class="callout__content">
               <h1 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h1>
-              <h2 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/putting-the-state-in-state-channels/"><b>Putting the State in State Channels</b></a></h2>
+              <h2 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/breaking-state-channels/"><b>Breaking state channels with TLA+</b></a></h2>
               <div class="callout__content__buttons">
                 <a class="btn btn--stroke" target="_blank" href="https://blog.statechannels.org">the blog</a>
                 <a class="btn btn--stroke" target="_blank" href="https://protocol.statechannels.org">protocol docs</a>
