Add google analytics snippet

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
   <meta name="twitter:url" content="https://statechannels.org/">
   <meta name="twitter:image" content="https://statechannels.org/assets/symbol.png">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114409337-6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114409337-6');
+  </script>
+
   <link rel="stylesheet" href="/app.css">
   <title>State Channels - Instant P2P Ethereum Transactions</title>
 </head>
