--- a/public/standards/index.html
+++ b/public/standards/index.html
@@ -30,6 +30,16 @@
   <meta name="twitter:url" content="https://statechannels.org/standards/">
   <meta name="twitter:image" content="https://statechannels.org/assets/symbol.png">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114409337-6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-114409337-6');
+  </script>
+
   <link rel="stylesheet" href="/app.css">
 
   <title>Standards | State Channels</title>
