Update link on sc.org to blog

--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
 
           <div class="footer__right">
             <p>
-              Join us on the research forum! <a href="https://research.statechannels.org/" target="_blank">research.statechannels.org</a>
+              Check out our blog series! <a href="https://blog.statechannels.org/" target="_blank">blog.statechannels.org</a>
             </p>
           </div>
         </footer>
