Move non-active contributors to alumni

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -121,11 +121,7 @@
                     </svg>
                   </a>
                   <ul class="member-list">
-                    <li>Nima Vaziri</li>
-                    <li>Li Xuanji</li>
                     <li>Liam Horne</li>
-                    <li>Mitch Van Der Hoeff</li>
-                    <li>Jeff Coleman</li>
                   </ul>
                 </div>
                 <div class="team-content__item__logos__item">
@@ -156,11 +152,7 @@
                     </svg>
                   </a>
                   <ul class="member-list">
-                    <li>Erik Bryn</li>
-                    <li>Patience Tema Baron</li>
-                    <li>Joel A. Villarreal Bertoldi</li>
                     <li>Alon Bukai</li>
-                    <li>Santiago Pérsico</li>
                   </ul>
                 </div>
                 <div class="team-content__item__logos__item">
@@ -341,14 +333,22 @@
               <div class="team-content__item__contributors">
                 <h3 class="team-content__item__contributors__title">Individual Contributors</h3>
                 <ul class="team-content__item__contributors__names">
+                  <li>Jeff Coleman</li>
+                  <li>Nima Vaziri</li>
+                  <li>Li Xuanji</li>
+                  <li>Mitch Van Der Hoeff</li>
                   <li>Armani Ferrante</li>
+                  <li>Glenn Wilkinson</li>
                   <li>Patrick McCorry</li>
                   <li>Chris Buckland</li>
                   <li>Alex Xiong</li>
                   <li>Igor Terzic</li>
+                  <li>Erik Bryn</li>
+                  <li>Patience Tema Baron</li>
+                  <li>Joel A. Villarreal Bertoldi</li>
+                  <li>Santiago Pérsico</li>
                 </ul>
               </div>
-            </div>
             <div class="team-content__item">
               <h3 class="team-content__item__title">Backers</h3>
               <p class="team-content__item__body"></p>
