Updated team page

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -331,7 +331,7 @@
               </div>
 
               <div class="team-content__item__contributors">
-                <h3 class="team-content__item__contributors__title">Individual Contributors</h3>
+                <h3 class="team-content__item__contributors__title">Alumni & Individual Contributors</h3>
                 <ul class="team-content__item__contributors__names">
                   <li>Jeff Coleman</li>
                   <li>Nima Vaziri</li>
@@ -349,6 +349,7 @@
                   <li>Santiago Pérsico</li>
                 </ul>
               </div>
+            </div>
             <div class="team-content__item">
               <h3 class="team-content__item__title">Backers</h3>
               <p class="team-content__item__body"></p>
@@ -359,7 +360,6 @@
               </div>
             </div>
           </div>
-
 
         </div>
       </div>
