--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
               <h2 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/introducing-web3torrent/"><b>Introducing Web3Torrent!</b></a></h2>
               <div class="callout__content__buttons">
                 <a class="btn btn--stroke" target="_blank" href="https://blog.statechannels.org">the blog</a>
-                <a class="btn btn--stroke" target="_blank" href="https://protocol.statechannels.org">docs</a>
+                <a class="btn btn--stroke" target="_blank" href="https://docs.statechannels.org">docs</a>
                 <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">the code</a>
               </div>
             </div>
