Update team page
Added Colin, Jie and Connie

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -155,11 +155,22 @@
                   </ul>
                 </div>
 
+                <div class="team-content__item__logos__item">
+                  <a>
+                    <img src="../assets/people/colin.png"></img>
+                  </a>
+                  <ul class="member-list">
+                    <li>Colin Kennedy</li>
+                  </ul>
+                </div>
+
               </div>
 
               <div class="team-content__item__contributors">
                 <h3 class="team-content__item__contributors__title">Alumni & Part-Time Contributors</h3>
                 <ul class="team-content__item__contributors__names">
+                  <li>Jie Yuan</li>
+                  <li>Connie Wong</li>
                   <li>Jeff Coleman</li>
                   <li>Nima Vaziri</li>
                   <li>Li Xuanji</li>
