update latest post in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
           <div class="callout">
             <div class="callout__content">
               <h1 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h1>
-              <h2 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/introducing-web3torrent/"><b>Introducing Web3Torrent!</b></a></h2>
+              <h2 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/virtual-channels/"><b>Virtual channels: creating a state channel network</b></a></h2>
               <div class="callout__content__buttons">
                 <a class="btn btn--stroke" target="_blank" href="https://blog.statechannels.org">the blog</a>
                 <a class="btn btn--stroke" target="_blank" href="https://docs.statechannels.org">docs</a>
