Update Teams and Homepage
- update teams page to include standards, update menu

--- a/public/team/index.html
+++ b/public/team/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
 
   <meta property="og:site_name" content="State Channels">
-  <meta property="og:title" content="Team | State Channels">
+  <meta property="og:title" content="Community | State Channels">
   <meta property="og:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
   <meta property="og:url" content="https://statechannels.org/team/">
   <meta property="og:type" content="website">
@@ -23,7 +23,7 @@
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
 
-  <meta name="twitter:title" content="Team | State Channels">
+  <meta name="twitter:title" content="Community | State Channels">
   <meta name="twitter:description" content="State Channels is an Open Source project that relies on the tireless support of individual contributors.">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/team/">
@@ -57,10 +57,9 @@
           </h1>
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
-            <a class="nav__right__item active" href="/team">team.</a>
+            <a class="nav__right__item active" href="/team">community.</a>
             <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">github.</a>
             <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
-            <a class="nav__right__item" href="/standards">standards.</a>
             <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
           </nav>
           <!-- /if desktop -->
@@ -74,10 +73,9 @@
 
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
-          <a class="mobile-menu__item active" href="/team">team.</a>
+          <a class="mobile-menu__item active" href="/team">community.</a>
           <a class="mobile-menu__item" target="_blank" href="https://github.com/statechannels">github.</a>
           <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org">forum.</a>
-          <a class="mobile-menu__item" href="/standards">standards.</a>
           <a class="mobile-menu__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
         </div>
       </div>
@@ -91,8 +89,10 @@
         <div class="container">
 
           <div class="hero">
-            <h2 class="hero__heading">Our team</h2>
-            <p class="hero__subheading">State Channels is an Open Source project that relies on the tireless support of individual contributors. These are the teams that guide the development and instruction of State Channels.</p>
+            <h2 class="hero__heading">Community</h2>
+            <p class="hero__subheading">State Channels is an Open Source project in pursuit of a <a href="/standards">unified state channel specification</a> for 
+              EVM compatible blockchains. This project relies on the tireless support of individual contributors. 
+              If you'd like to contribute or just chat with us, <a target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">join our slack community</a>!
           </div>
 
           <div class="team-content">
