--- a/public/team/index.html
+++ b/public/team/index.html
@@ -90,9 +90,13 @@
 
           <div class="hero">
             <h2 class="hero__heading">Community</h2>
-            <p class="hero__subheading">State Channels is an Open Source project in pursuit of a <a href="/standards">unified state channel specification</a> for 
+            <p class="statechannels__abstract">State Channels is an Open Source project in pursuit of a <a href="/standards">unified state channel specification</a> for 
               EVM compatible blockchains. This project relies on the tireless support of individual contributors. 
-              If you'd like to contribute or just chat with us, <a target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A">join our slack community</a>!
+              </p>
+              <p class="statechannels__abstract">
+              If you'd like to contribute or just chat with us, <br>
+              <a target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A"><b>join our slack community</b></a>!
+              </p>
           </div>
 
           <div class="team-content">
