home page content update

--- a/public/index.html
+++ b/public/index.html
@@ -57,10 +57,9 @@
 
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
-            <a class="nav__right__item" href="/team">team.</a>
-            <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">github.</a>
+            <a class="nav__right__item" href="/team">community.</a>
+            <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">developers.</a>
             <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
-            <a class="nav__right__item" href="/standards">standards.</a>
             <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
           </nav>
           <!-- /if desktop -->
@@ -74,10 +73,9 @@
 
         <div class="mobile-menu mobile-only">
           <button class="mobile-menu__close">close</button>
-          <a class="mobile-menu__item" href="/team">team.</a>
+          <a class="mobile-menu__item" href="/team">community.</a>
           <a class="mobile-menu__item" target="_blank" href="https://github.com/statechannels">github.</a>
           <a class="mobile-menu__item" target="_blank" href="https://research.statechannels.org">forum.</a>
-          <a class="mobile-menu__item" href="/standards">standards.</a>
           <a class="mobile-menu__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
         </div>
       </div>
@@ -93,11 +91,11 @@
           <div class="callout">
             <div class="callout__content">
               <h1 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h1>
-              <h2 class="callout__content__subheading">Read our latest post: <a href="https://blog.statechannels.org/virtual-channels/"><b>Virtual channels: creating a state channel network</b></a></h2>
+              <h2 class="callout__content__subheading">State Channels consists of a decentralized, private offchain network which enables high frequency state exchanges with multiple peers 
+                and an on chain arbitration mechanism, providing the security guarantees of the blockchain.</h2>
               <div class="callout__content__buttons">
-                <a class="btn btn--stroke" target="_blank" href="https://blog.statechannels.org">the blog</a>
-                <a class="btn btn--stroke" target="_blank" href="https://docs.statechannels.org">docs</a>
-                <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">the code</a>
+                  <a class="btn btn--stroke" target="_blank" href="https://docs.statechannels.org">documentation</a>
+                <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">community</a>
               </div>
             </div>
           </div>
@@ -123,7 +121,7 @@
 
           <div class="footer__right">
             <p>
-              Check out our blog series! <a href="https://blog.statechannels.org/" target="_blank">blog.statechannels.org</a>
+              Check out our latest blog post: <a target="_blank" href="https://blog.statechannels.org/virtual-channels/"><b>Virtual channels: creating a state channel network</b></a>
             </p>
           </div>
         </footer>
