--- a/public/team/index.html
+++ b/public/team/index.html
@@ -93,9 +93,8 @@
             <p class="statechannels__abstract">State Channels is an Open Source project in pursuit of a <a href="/standards">unified state channel specification</a> for 
               EVM compatible blockchains. This project relies on the tireless support of individual contributors. 
               </p>
-              <p class="statechannels__abstract">
-              If you'd like to contribute or just chat with us, <br>
-              <a target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A"><b>join our slack community</b></a>!
+              <p class="statechannels__abstract"><centre></centre>
+              If you'd like to contribute or just chat with us, <a target="_blank" href="https://join.slack.com/t/statechannels/shared_invite/zt-y2hs9xde-GX8oUIWmnjo1JYDUlgST2A"><b>join our slack community</b></a>!
               </p>
           </div>
 
@@ -227,11 +226,6 @@
             </p>
           </div>
 
-          <div class="footer__right">
-            <p>
-              Check out our blog series! <a href="https://blog.statechannels.org/" target="_blank">blog.statechannels.org</a>
-            </p>
-          </div>
         </footer>
         <div class="hosted-by"><span>Hosted by</span> <img style="width: 5rem;" src="../assets/netlify-logo.svg" alt="Netlify" /></div>
       </div>
