--- a/public/index.html
+++ b/public/index.html
@@ -90,9 +90,8 @@
 
           <div class="callout">
             <div class="callout__content">
-              <h1 class="callout__content__heading">State channels scale peer-to-peer blockchain interactions.</h1>
-              <h2 class="callout__content__subheading">State Channels consists of a decentralized, private offchain network which enables high frequency state exchanges with multiple peers 
-                and an on chain arbitration mechanism, providing the security guarantees of the blockchain.</h2>
+              <h1 class="callout__content__heading">Scale peer-to-peer blockchain interactions.</h1>
+              <h2 class="callout__content__subheading">State Channels enables secure, high frequency state exchanges between multiple peers for your EVM compatible application</h2>
               <div class="callout__content__buttons">
                   <a class="btn btn--stroke" target="_blank" href="https://docs.statechannels.org">documentation</a>
                 <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">community</a>
