--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
 
           <div class="footer__right">
             <p>
-              Check out our latest blog post: <a target="_blank" href="https://blog.statechannels.org/virtual-channels/"><b>Virtual channels: creating a state channel network</b></a>
+              Check out our latest blog post: <a target="_blank" href="https://blog.statechannels.org/virtual-channels/"><b>Virtual channels</b></a>
             </p>
           </div>
         </footer>
