--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,14 @@
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
             <a class="nav__right__item" href="/team">community.</a>
+            <div class="dropdown">
+              <a class="nav__right__item">developers.</a>
+              <div id="myDropdown" class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+              </div>
+            </div>
             <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">developers.</a>
             <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
             <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
