--- a/public/index.html
+++ b/public/index.html
@@ -61,13 +61,17 @@
             <div class="dropdown">
               <a class="nav__right__item">developers.</a>
               <div id="myDropdown" class="dropdown-content">
-                <a href="#">Link 1</a>
-                <a href="#">Link 2</a>
-                <a href="#">Link 3</a>
+                <li>
+                <a class="nav__right__item" target="_blank" href="https://docs.statechannels.org">docs.</a>
+                </li>
+                <li>
+                <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
+                </li>
+                <li>
+                <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">code.</a>
+                </li>
               </div>
             </div>
-            <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">developers.</a>
-            <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
             <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
           </nav>
           <!-- /if desktop -->
