nav bar css update

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,9 +12,11 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3531ff">
   <meta name="msapplication-TileColor" content="#2b5797">
   <meta name="theme-color" content="#ffffff">
-  <meta name="description" content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
-  
-  <meta property="og:description" content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
+  <meta name="description"
+    content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
+
+  <meta property="og:description"
+    content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
   <meta property="og:site_name" content="State Channels - Instant P2P Ethereum Transactions">
   <meta property="og:title" content="State Channels - Instant P2P Ethereum Transactions">
   <meta property="og:url" content="https://statechannels.org/">
@@ -21,9 +24,10 @@
   <meta property="og:image" content="https://statechannels.org/assets/symbol.png">
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="400" />
-  
+
   <meta name="twitter:title" content="State Channels - Instant P2P Ethereum Transactions">
-  <meta name="twitter:description" content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
+  <meta name="twitter:description"
+    content="State channels are a scalability technology for ethereum enabling instant & free peer-to-peer ethereum transactions">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="https://statechannels.org/">
   <meta name="twitter:image" content="https://statechannels.org/assets/symbol.png">
@@ -32,7 +36,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114409337-6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-114409337-6');
@@ -41,6 +45,7 @@
   <link rel="stylesheet" href="/app.css">
   <title>State Channels - Instant P2P Ethereum Transactions</title>
 </head>
+
 <body>
   <div class="wrapper">
 
@@ -51,27 +56,75 @@
         <div class="nav">
           <div class="nav__left">
             <a href="/" alt="State Channels">
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 347.74 78.18"><defs><style>.cls-1{fill:#3531FF;}.cls-2{fill:#323131;}</style></defs><title>logo</title><path class="cls-1" d="M191.71,381.41h-57a10.61,10.61,0,0,0-10.6,10.6v57a10.6,10.6,0,0,0,10.6,10.6h57a10.6,10.6,0,0,0,10.6-10.6V392A10.61,10.61,0,0,0,191.71,381.41Zm-3,26a8.69,8.69,0,0,1-2.78,1.89,52.54,52.54,0,0,1-7.64,28.48A9,9,0,1,1,162,442.21a44.93,44.93,0,0,1-11.77-8.85l-.84-.82a45.64,45.64,0,0,1-8.21-11.19,9,9,0,1,1,4.32-16.28,45.19,45.19,0,0,1,16.31-6.41l.24,0,.13,0a44.5,44.5,0,0,1,11.75-1,9,9,0,1,1,14.72,9.87Zm-45.43,1.91a4.3,4.3,0,1,0-6.08,6.08,4.26,4.26,0,0,0,1.92,1.11,4.3,4.3,0,0,0,4.16-1.11,4,4,0,0,0,.34-.38,4.3,4.3,0,0,0-.34-5.7ZM174,440.13a4.24,4.24,0,0,0-2.46-1.22,4.3,4.3,0,0,0-3.28.92l-.33.3a4.28,4.28,0,0,0-1.09,4.22A4.14,4.14,0,0,0,168,446.2a4.29,4.29,0,0,0,7.18-4.17A4.25,4.25,0,0,0,174,440.13Zm1.86-32.71a9,9,0,0,1-2.55-5.16,39.63,39.63,0,0,0-10.14,1h-.07l-.24,0-.18,0a40.58,40.58,0,0,0-14.21,5.48,9.07,9.07,0,0,1-1.91,10,8.4,8.4,0,0,1-1,.83A40.94,40.94,0,0,0,153.56,430l.09.09a40.35,40.35,0,0,0,10.12,7.71,8.64,8.64,0,0,1,.85-1,9,9,0,0,1,9.9-1.93,40.44,40.44,0,0,0,5-11.91c0-.07,0-.13.05-.18A40.52,40.52,0,0,0,181.19,410,9,9,0,0,1,175.9,407.42Zm3.35-9.43-.1.11a4.3,4.3,0,0,0,6.17,6h0a4.3,4.3,0,1,0-6.08-6.08Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M245.23,394.63c-.2-1.32-1.28-3.56-4.72-3.56-2.36,0-3.88,1.48-3.88,3,0,1.36.84,2.36,2.8,2.72l3.8.72c5.4,1,8.2,4.48,8.2,8.52,0,4.44-3.72,9-10.48,9-7.84,0-11.19-5.08-11.59-9.08l5.79-1.4c.24,2.6,2,4.88,5.88,4.88,2.48,0,4-1.2,4-3,0-1.44-1.16-2.48-3-2.84l-3.88-.72c-4.8-.92-7.72-4.12-7.72-8.32,0-5.36,4.72-9.12,10.16-9.12,7.08,0,9.76,4.24,10.36,7.56Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M271.63,392.11v22.32h-6.32V392.11h-8.72v-6h23.8v6Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M301.79,408.67h-11l-2,5.76h-6.63l10.67-28.36h7.32l10.56,28.36h-6.88Zm-8.88-5.76h6.88l-3.4-9.8Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M327.51,392.11v22.32h-6.32V392.11h-8.71v-6h23.79v6Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M343.32,414.43V386.07h17.95v6H349.63v5.4h10.56V403H349.63v5.44h11.68v6Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M229.76,441.35a14.43,14.43,0,0,1,14.63-14.84c8.52,0,12.28,5.48,13.2,9.56l-6,1.88c-.44-2-2.24-5.28-7.24-5.28-3.8,0-8.08,2.72-8.08,8.68a8,8,0,0,0,8.16,8.39,7.24,7.24,0,0,0,7.44-5.32l6,1.72c-.92,3.92-4.68,9.92-13.48,9.92C236.31,456.06,229.76,450.18,229.76,441.35Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M283.11,455.46V444.18H271.79v11.28h-6.32V427.11h6.32v11.12h11.32V427.11h6.36v28.35Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M315.75,449.7h-11l-2,5.76h-6.64l10.68-28.35h7.32l10.56,28.35h-6.88Zm-8.88-5.76h6.88l-3.4-9.79Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M349.31,455.46l-11.68-18.63v18.63h-6.28V427.11H339l10.64,17.23V427.11H356v28.35Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M383.27,455.46l-11.68-18.63v18.63h-6.28V427.11H373l10.64,17.23V427.11H390v28.35Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M399.27,455.46V427.11h18v6H405.59v5.4h10.56V444H405.59v5.44h11.68v6Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M425.79,455.46V427.11h6.32v22.31h12.24v6Z" transform="translate(-124.13 -381.41)"/><path class="cls-2" d="M465.67,435.67c-.2-1.32-1.28-3.56-4.72-3.56-2.36,0-3.88,1.48-3.88,3,0,1.36.84,2.36,2.8,2.72l3.8.72c5.4,1,8.2,4.48,8.2,8.51,0,4.44-3.72,9-10.48,9-7.84,0-11.2-5.08-11.6-9.08l5.8-1.4c.24,2.6,2,4.88,5.88,4.88,2.48,0,4-1.2,4-3,0-1.44-1.16-2.48-3-2.84l-3.88-.72c-4.8-.91-7.72-4.12-7.72-8.31,0-5.36,4.72-9.12,10.16-9.12,7.08,0,9.76,4.24,10.36,7.56Z" transform="translate(-124.13 -381.41)"/></svg>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 347.74 78.18">
+                <defs>
+                  <style>
+                    .cls-1 {
+                      fill: #3531FF;
+                    }
+
+                    .cls-2 {
+                      fill: #323131;
+                    }
+                  </style>
+                </defs>
+                <title>logo</title>
+                <path class="cls-1"
+                  d="M191.71,381.41h-57a10.61,10.61,0,0,0-10.6,10.6v57a10.6,10.6,0,0,0,10.6,10.6h57a10.6,10.6,0,0,0,10.6-10.6V392A10.61,10.61,0,0,0,191.71,381.41Zm-3,26a8.69,8.69,0,0,1-2.78,1.89,52.54,52.54,0,0,1-7.64,28.48A9,9,0,1,1,162,442.21a44.93,44.93,0,0,1-11.77-8.85l-.84-.82a45.64,45.64,0,0,1-8.21-11.19,9,9,0,1,1,4.32-16.28,45.19,45.19,0,0,1,16.31-6.41l.24,0,.13,0a44.5,44.5,0,0,1,11.75-1,9,9,0,1,1,14.72,9.87Zm-45.43,1.91a4.3,4.3,0,1,0-6.08,6.08,4.26,4.26,0,0,0,1.92,1.11,4.3,4.3,0,0,0,4.16-1.11,4,4,0,0,0,.34-.38,4.3,4.3,0,0,0-.34-5.7ZM174,440.13a4.24,4.24,0,0,0-2.46-1.22,4.3,4.3,0,0,0-3.28.92l-.33.3a4.28,4.28,0,0,0-1.09,4.22A4.14,4.14,0,0,0,168,446.2a4.29,4.29,0,0,0,7.18-4.17A4.25,4.25,0,0,0,174,440.13Zm1.86-32.71a9,9,0,0,1-2.55-5.16,39.63,39.63,0,0,0-10.14,1h-.07l-.24,0-.18,0a40.58,40.58,0,0,0-14.21,5.48,9.07,9.07,0,0,1-1.91,10,8.4,8.4,0,0,1-1,.83A40.94,40.94,0,0,0,153.56,430l.09.09a40.35,40.35,0,0,0,10.12,7.71,8.64,8.64,0,0,1,.85-1,9,9,0,0,1,9.9-1.93,40.44,40.44,0,0,0,5-11.91c0-.07,0-.13.05-.18A40.52,40.52,0,0,0,181.19,410,9,9,0,0,1,175.9,407.42Zm3.35-9.43-.1.11a4.3,4.3,0,0,0,6.17,6h0a4.3,4.3,0,1,0-6.08-6.08Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2"
+                  d="M245.23,394.63c-.2-1.32-1.28-3.56-4.72-3.56-2.36,0-3.88,1.48-3.88,3,0,1.36.84,2.36,2.8,2.72l3.8.72c5.4,1,8.2,4.48,8.2,8.52,0,4.44-3.72,9-10.48,9-7.84,0-11.19-5.08-11.59-9.08l5.79-1.4c.24,2.6,2,4.88,5.88,4.88,2.48,0,4-1.2,4-3,0-1.44-1.16-2.48-3-2.84l-3.88-.72c-4.8-.92-7.72-4.12-7.72-8.32,0-5.36,4.72-9.12,10.16-9.12,7.08,0,9.76,4.24,10.36,7.56Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2" d="M271.63,392.11v22.32h-6.32V392.11h-8.72v-6h23.8v6Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2"
+                  d="M301.79,408.67h-11l-2,5.76h-6.63l10.67-28.36h7.32l10.56,28.36h-6.88Zm-8.88-5.76h6.88l-3.4-9.8Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2" d="M327.51,392.11v22.32h-6.32V392.11h-8.71v-6h23.79v6Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2" d="M343.32,414.43V386.07h17.95v6H349.63v5.4h10.56V403H349.63v5.44h11.68v6Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2"
+                  d="M229.76,441.35a14.43,14.43,0,0,1,14.63-14.84c8.52,0,12.28,5.48,13.2,9.56l-6,1.88c-.44-2-2.24-5.28-7.24-5.28-3.8,0-8.08,2.72-8.08,8.68a8,8,0,0,0,8.16,8.39,7.24,7.24,0,0,0,7.44-5.32l6,1.72c-.92,3.92-4.68,9.92-13.48,9.92C236.31,456.06,229.76,450.18,229.76,441.35Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2"
+                  d="M283.11,455.46V444.18H271.79v11.28h-6.32V427.11h6.32v11.12h11.32V427.11h6.36v28.35Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2"
+                  d="M315.75,449.7h-11l-2,5.76h-6.64l10.68-28.35h7.32l10.56,28.35h-6.88Zm-8.88-5.76h6.88l-3.4-9.79Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2" d="M349.31,455.46l-11.68-18.63v18.63h-6.28V427.11H339l10.64,17.23V427.11H356v28.35Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2" d="M383.27,455.46l-11.68-18.63v18.63h-6.28V427.11H373l10.64,17.23V427.11H390v28.35Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2" d="M399.27,455.46V427.11h18v6H405.59v5.4h10.56V444H405.59v5.44h11.68v6Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2" d="M425.79,455.46V427.11h6.32v22.31h12.24v6Z"
+                  transform="translate(-124.13 -381.41)" />
+                <path class="cls-2"
+                  d="M465.67,435.67c-.2-1.32-1.28-3.56-4.72-3.56-2.36,0-3.88,1.48-3.88,3,0,1.36.84,2.36,2.8,2.72l3.8.72c5.4,1,8.2,4.48,8.2,8.51,0,4.44-3.72,9-10.48,9-7.84,0-11.2-5.08-11.6-9.08l5.8-1.4c.24,2.6,2,4.88,5.88,4.88,2.48,0,4-1.2,4-3,0-1.44-1.16-2.48-3-2.84l-3.88-.72c-4.8-.91-7.72-4.12-7.72-8.31,0-5.36,4.72-9.12,10.16-9.12,7.08,0,9.76,4.24,10.36,7.56Z"
+                  transform="translate(-124.13 -381.41)" />
+              </svg>
             </a>
           </div>
 
           <!-- #if desktop -->
           <nav class="nav__right mobile-off">
             <a class="nav__right__item" href="/team">community.</a>
-            <div class="dropdown">
+            <nav class="nav__dropdown">
               <a class="nav__right__item">developers.</a>
-              <div id="myDropdown" class="dropdown-content">
+              <ul class="nav__dropdown__list">
                 <li>
-                <a class="nav__right__item" target="_blank" href="https://docs.statechannels.org">docs.</a>
+                  <a class="nav__dropdown__item" target="_blank" href="https://docs.statechannels.org">docs.</a>
                 </li>
                 <li>
-                <a class="nav__right__item" target="_blank" href="https://research.statechannels.org">forum.</a>
+                  <a class="nav__dropdown__item" target="_blank" href="https://research.statechannels.org">forum.</a>
                 </li>
                 <li>
-                <a class="nav__right__item" target="_blank" href="https://github.com/statechannels">code.</a>
+                  <a class="nav__dropdown__item" target="_blank" href="https://github.com/statechannels">code.</a>
                 </li>
-              </div>
-            </div>
+              </ul>
+            </nav>
             <a class="nav__right__item" target="_blank" href="https://blog.statechannels.org">blog.</a>
           </nav>
           <!-- /if desktop -->
@@ -103,9 +156,10 @@
           <div class="callout">
             <div class="callout__content">
               <h1 class="callout__content__heading">Scale peer-to-peer blockchain interactions.</h1>
-              <h2 class="callout__content__subheading">State Channels enables secure, high frequency state exchanges between multiple peers for your EVM compatible application</h2>
+              <h2 class="callout__content__subheading">State Channels enables secure, high frequency state exchanges
+                between multiple peers for your EVM compatible application</h2>
               <div class="callout__content__buttons">
-                  <a class="btn btn--stroke" target="_blank" href="https://docs.statechannels.org">documentation</a>
+                <a class="btn btn--stroke" target="_blank" href="https://docs.statechannels.org">documentation</a>
                 <a class="btn btn--stroke" target="_blank" href="https://github.com/statechannels">community</a>
               </div>
             </div>
@@ -124,7 +178,20 @@
 
         <footer class="footer">
           <div class="footer__left">
-            <svg class="footer__left__logo" id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 313.59 313.59"><defs><style>.cls-1{fill:#3531FF;}</style></defs><title>iso</title><path class="cls-1" d="M217.52,376.15a17.22,17.22,0,1,0,0,24.37,15.07,15.07,0,0,0,1.35-1.53,17.27,17.27,0,0,0-1.36-22.84ZM341.05,499.68a17.25,17.25,0,0,0-23-1.22,15.53,15.53,0,0,0-1.35,1.21,17.24,17.24,0,1,0,28.8,7.65A17.08,17.08,0,0,0,341.05,499.68Zm7.46-131.2a36,36,0,0,1-10.26-20.69,159.31,159.31,0,0,0-40.66,3.84l-.3.05c-.31.07-.64.12-1,.18l-.69.13a163.38,163.38,0,0,0-57,22A36.26,36.26,0,0,1,231,414a37.53,37.53,0,0,1-3.84,3.33,163.46,163.46,0,0,0,31.77,41.61l.34.34a162.38,162.38,0,0,0,40.6,30.95,35.09,35.09,0,0,1,3.41-3.95A36.26,36.26,0,0,1,343,478.5a162.49,162.49,0,0,0,20.09-47.79c.06-.24.13-.48.21-.71a162.35,162.35,0,0,0,6.43-51.2A36.06,36.06,0,0,1,348.51,368.48Zm13.43-37.82-.41.43a17.24,17.24,0,0,0,24.75,24l.05,0a17.24,17.24,0,0,0-24.39-24.38Zm50-66.51H183.34a42.5,42.5,0,0,0-42.5,42.5V535.24a42.5,42.5,0,0,0,42.5,42.5H411.93a42.5,42.5,0,0,0,42.5-42.5V306.65A42.5,42.5,0,0,0,411.93,264.15ZM399.76,368.48a35.79,35.79,0,0,1-11.16,7.59,181.25,181.25,0,0,1-7.16,59.43A181.66,181.66,0,0,1,358,490.29,36.24,36.24,0,1,1,292.85,508a179.16,179.16,0,0,1-47.2-35.48q-1.71-1.62-3.38-3.3a182.36,182.36,0,0,1-32.91-44.9,36.23,36.23,0,1,1,17.31-65.28,181.8,181.8,0,0,1,65.44-25.73l.93-.17.54-.1a177.73,177.73,0,0,1,47.12-4.17,36.24,36.24,0,1,1,59.06,39.6Z" transform="translate(-140.84 -264.15)"/></svg>
+            <svg class="footer__left__logo" id="Capa_1" data-name="Capa 1" xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 313.59 313.59">
+              <defs>
+                <style>
+                  .cls-1 {
+                    fill: #3531FF;
+                  }
+                </style>
+              </defs>
+              <title>iso</title>
+              <path class="cls-1"
+                d="M217.52,376.15a17.22,17.22,0,1,0,0,24.37,15.07,15.07,0,0,0,1.35-1.53,17.27,17.27,0,0,0-1.36-22.84ZM341.05,499.68a17.25,17.25,0,0,0-23-1.22,15.53,15.53,0,0,0-1.35,1.21,17.24,17.24,0,1,0,28.8,7.65A17.08,17.08,0,0,0,341.05,499.68Zm7.46-131.2a36,36,0,0,1-10.26-20.69,159.31,159.31,0,0,0-40.66,3.84l-.3.05c-.31.07-.64.12-1,.18l-.69.13a163.38,163.38,0,0,0-57,22A36.26,36.26,0,0,1,231,414a37.53,37.53,0,0,1-3.84,3.33,163.46,163.46,0,0,0,31.77,41.61l.34.34a162.38,162.38,0,0,0,40.6,30.95,35.09,35.09,0,0,1,3.41-3.95A36.26,36.26,0,0,1,343,478.5a162.49,162.49,0,0,0,20.09-47.79c.06-.24.13-.48.21-.71a162.35,162.35,0,0,0,6.43-51.2A36.06,36.06,0,0,1,348.51,368.48Zm13.43-37.82-.41.43a17.24,17.24,0,0,0,24.75,24l.05,0a17.24,17.24,0,0,0-24.39-24.38Zm50-66.51H183.34a42.5,42.5,0,0,0-42.5,42.5V535.24a42.5,42.5,0,0,0,42.5,42.5H411.93a42.5,42.5,0,0,0,42.5-42.5V306.65A42.5,42.5,0,0,0,411.93,264.15ZM399.76,368.48a35.79,35.79,0,0,1-11.16,7.59,181.25,181.25,0,0,1-7.16,59.43A181.66,181.66,0,0,1,358,490.29,36.24,36.24,0,1,1,292.85,508a179.16,179.16,0,0,1-47.2-35.48q-1.71-1.62-3.38-3.3a182.36,182.36,0,0,1-32.91-44.9,36.23,36.23,0,1,1,17.31-65.28,181.8,181.8,0,0,1,65.44-25.73l.93-.17.54-.1a177.73,177.73,0,0,1,47.12-4.17,36.24,36.24,0,1,1,59.06,39.6Z"
+                transform="translate(-140.84 -264.15)" />
+            </svg>
             <p class="footer__left__text">
               Copyright © 2020 State Channels contributors
             </p>
@@ -132,13 +199,15 @@
 
           <div class="footer__right">
             <p>
-              Check out our latest blog post: <a target="_blank" href="https://blog.statechannels.org/virtual-channels/"><b>Virtual channels</b></a>
+              Check out our latest blog post: <a target="_blank"
+                href="https://blog.statechannels.org/virtual-channels/"><b>Virtual channels</b></a>
             </p>
           </div>
         </footer>
         <div class="hosted-by">
           <span>Hosted by</span>
-          <a target="_blank" href="https://netlify.com/"><img style="width: 5rem;" src="./assets/netlify-logo.svg" alt="Netlify" /></a>
+          <a target="_blank" href="https://netlify.com/"><img style="width: 5rem;" src="./assets/netlify-logo.svg"
+              alt="Netlify" /></a>
         </div>
       </div>
     </div>
@@ -148,4 +217,5 @@
 
   <script src="/app.js" charset="utf-8"></script>
 </body>
+
 </html>
